--- a/app/src/main/res/layout/fragment_inmuebles.xml
+++ b/app/src/main/res/layout/fragment_inmuebles.xml
@@ -3,18 +3,18 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/layoutContratos"
+    android:id="@+id/layoutInmuebles"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F38DC4CE"
-    tools:context=".ui.contratos.ContratosFragment">
+    tools:context=".ui.inmuebles.InmueblesFragment">
 
     <!-- Título -->
     <TextView
-        android:id="@+id/tvTituloContratos"
+        android:id="@+id/tvTituloInmuebles"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Contratos"
+        android:text="Inmuebles"
         android:textStyle="bold"
         android:textSize="22sp"
         android:textColor="#003366"
@@ -28,29 +28,44 @@
 
     <!-- Lista -->
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvContratos"
+        android:id="@+id/rvInmuebles"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:padding="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvTituloContratos"
-        tools:listitem="@layout/item_contrato" />
+        app:layout_constraintTop_toBottomOf="@id/tvTituloInmuebles"
+        app:layout_constraintVertical_bias="0.0"
+        tools:listitem="@layout/item_inmueble" />
 
-    <!-- Estado vacío -->
+    <!-- Estado vacío (se puede ocultar en runtime) -->
     <TextView
-        android:id="@+id/tvEmptyContratos"
+        android:id="@+id/tvEmpty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="No hay contratos cargados"
+        android:text="No hay inmuebles cargados"
         android:textColor="#003366"
         android:textSize="16sp"
         android:visibility="gone"
-        app:layout_constraintTop_toBottomOf="@id/tvTituloContratos"
+        app:layout_constraintTop_toBottomOf="@id/tvTituloInmuebles"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- Botón Agregar -->
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabAgregarInmueble"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="Agregar inmueble"
+        app:srcCompat="@android:drawable/ic_input_add"
+        app:tint="@android:color/white"
+        app:backgroundTint="#0055AA"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="24dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
