--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -33,7 +33,7 @@
     </group>
 
     <item
-        android:id="@+id/nav_cerrar_sesion"
+        android:id="@+id/salirFragment"
         android:icon="@drawable/logout"
         android:title="Salir" />
 </menu>
