--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -27,19 +27,34 @@
         android:id="@+id/nav_inmuebles"
         android:name="com.softulp.inmobiliaria.ui.inmuebles.InmueblesFragment"
         android:label="@string/menu_inmuebles"
-        tools:layout="@layout/fragment_inmuebles" />
+        tools:layout="@layout/fragment_inmuebles" >
+        <action
+            android:id="@+id/action_nav_inmuebles_to_detalleInmuebleFragment"
+            app:destination="@id/detalleInmuebleFragment" />
+        <action
+            android:id="@+id/action_nav_inmuebles_to_cargarInmuebleFragment"
+            app:destination="@id/cargarInmuebleFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/nav_inquilinos"
         android:name="com.softulp.inmobiliaria.ui.inquilinos.InquilinosFragment"
         android:label="@string/menu_inquilinos"
-        tools:layout="@layout/fragment_inquilinos" />
+        tools:layout="@layout/fragment_inquilinos" >
+        <action
+            android:id="@+id/action_nav_inquilinos_to_detalleInquilino"
+            app:destination="@id/detalleInquilino" />
+    </fragment>
 
     <fragment
         android:id="@+id/nav_contratos"
         android:name="com.softulp.inmobiliaria.ui.contratos.ContratosFragment"
         android:label="@string/menu_contratos"
-        tools:layout="@layout/fragment_contratos" />
+        tools:layout="@layout/fragment_contratos" >
+        <action
+            android:id="@+id/action_nav_contratos_to_detalleContratoFragment"
+            app:destination="@id/detalleContratoFragment" />
+    </fragment>
 
     <!-- NUEVO DESTINO: Cambiar contraseña -->
     <fragment
@@ -47,5 +62,53 @@
         android:name="com.softulp.inmobiliaria.ui.perfil.ContraseniaFragment"
         android:label="Cambiar contraseña"
         tools:layout="@layout/fragment_contrasenia" />
+    <fragment
+        android:id="@+id/detalleInmuebleFragment"
+        android:name="com.softulp.inmobiliaria.ui.inmuebles.DetalleInmuebleFragment"
+        android:label="Detalle de inmueble"
+        tools:layout="@layout/fragment_detalle_inmueble" >
+        <action
+            android:id="@+id/action_detalleInmuebleFragment_to_nav_inmuebles"
+            app:destination="@id/nav_inmuebles" />
+    </fragment>
+    <fragment
+        android:id="@+id/cargarInmuebleFragment"
+        android:name="com.softulp.inmobiliaria.ui.inmuebles.CargarInmuebleFragment"
+        android:label="Cargar inmueble"
+        tools:layout="@layout/fragment_cargar_inmueble" >
+        <action
+            android:id="@+id/action_cargarInmuebleFragment_to_nav_inmuebles"
+            app:destination="@id/nav_inmuebles" />
+    </fragment>
+    <fragment
+        android:id="@+id/detalleInquilino"
+        android:name="com.softulp.inmobiliaria.ui.inquilinos.DetalleInquilinoFragment"
+        android:label="Detalle  del inquilino"
+        tools:layout="@layout/fragment_detalle_inquilino" >
+        <action
+            android:id="@+id/action_detalleInquilino_to_nav_inquilinos"
+            app:destination="@id/nav_inquilinos" />
+    </fragment>
+    <fragment
+        android:id="@+id/detalleContratoFragment"
+        android:name="com.softulp.inmobiliaria.ui.contratos.DetalleContratoFragment"
+        android:label="Detalle del contrato"
+        tools:layout="@layout/fragment_detalle_contrato" >
+        <action
+            android:id="@+id/action_detalleContratoFragment_to_detallePagosFragment"
+            app:destination="@id/detallePagosFragment" />
+        <action
+            android:id="@+id/action_detalleContratoFragment_to_detallePagosFragment2"
+            app:destination="@id/detallePagosFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/detallePagosFragment"
+        android:name="com.softulp.inmobiliaria.ui.contratos.DetallePagosFragment"
+        android:label="Detalle de pagos"
+        tools:layout="@layout/fragment_detalle_pagos" />
+    <fragment
+        android:id="@+id/salirFragment"
+        android:name="com.softulp.inmobiliaria.ui.salir.SalirFragment"
+        android:label="Salir" />
 
 </navigation>
